// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows for component overrides 1`] = `
<ul
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div />
  <div />
  <div />
  <div />
</ul>
`;

exports[`allows for method overrides 1`] = `
<ul
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders a sample tree 1`] = `
<ul
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders the correct pagination structure 1`] = `
<ul
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders with a different indent width 1`] = `
<ul
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": 0,
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders with a different theme 1`] = `
<ul
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "margin": "2px 0",
        "padding": "0 8px",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "fill": "black",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={
            Object {
              "fill": "black",
              "fontSize": 20,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": "0 5px",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-12 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "margin": "2px 0",
        "padding": "0 8px",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <div
      className="MuiListItemIcon-root-15"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "fill": "black",
          "marginRight": 0,
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-16"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      className="MuiButtonBase-root-12 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiCheckbox-root-25 MuiCheckbox-colorPrimary-29"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-16"
          focusable="false"
          role="presentation"
          style={
            Object {
              "fill": "black",
              "fontSize": 20,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-34"
          data-indeterminate={false}
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-86"
      />
    </span>
    <div
      className="MuiListItemText-root-41"
      role="button"
      style={
        Object {
          "padding": "0 5px",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-47 MuiTypography-subheading-54 MuiListItemText-primary-44"
      >
        <p
          className={null}
          style={
            Object {
              "padding": 0,
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-86"
    />
  </div>
  <ul
    className="MuiList-root-82 MuiList-padding-83"
    style={
      Object {
        "paddingBottom": 0,
        "paddingTop": 0,
      }
    }
  >
    <span />
  </ul>
</ul>
`;
